@@ -1,2 +1,3 @@
 *~
 .*.swp
+/UNIT_TEST/
