@@ -114,7 +114,6 @@ tino_debugprintf(const char *s, ...)
   fflush(stderr);
 }
 
-void TINO_INLINE IGUR() {}	/* see http://stackoverflow.com/a/27672750 */
-void IGUR();			/* see http://stackoverflow.com/a/16245669 */
+TINO_INLINE(void IGUR()) {}	/* see http://stackoverflow.com/a/27672750 */
 
 #endif
